--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,10 @@
 # To ensure app dependencies are ported from your virtual environment/host machine into your container, run 'pip freeze > requirements.txt' in the terminal to overwrite this file
 flask==2.0.2
 gunicorn==20.1.0
+flask-cors==3.0.10
+
+opentelemetry-api 
+opentelemetry-sdK
+opentelemetry-exporter-otlp-proto-http 
+opentelemetry-instrumentation-flask
+opentelemetry-instrumentation-requests
