--- a/backend-flask/requirements.txt
+++ b/backend-flask/requirements.txt
@@ -1,2 +1,8 @@
 flask
 flask-cors
+
+opentelemetry-api 
+opentelemetry-sdK
+opentelemetry-exporter-otlp-proto-http 
+opentelemetry-instrumentation-flask
+opentelemetry-instrumentation-requests
