--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,5 @@ opentelemetry-sdK
 opentelemetry-exporter-otlp-proto-http 
 opentelemetry-instrumentation-flask
 opentelemetry-instrumentation-requests
+
+aws-xray-sdk
