--- a/backend-flask/requirements.txt
+++ b/backend-flask/requirements.txt
@@ -6,3 +6,5 @@ opentelemetry-sdK
 opentelemetry-exporter-otlp-proto-http 
 opentelemetry-instrumentation-flask
 opentelemetry-instrumentation-requests
+
+aws-xray-sdk
