--- a/backend-flask/requirements.txt
+++ b/backend-flask/requirements.txt
@@ -1,5 +1,7 @@
-flask
-flask-cors
+# To ensure app dependencies are ported from your virtual environment/host machine into your container, run 'pip freeze > requirements.txt' in the terminal to overwrite this file
+flask==2.0.2
+gunicorn==20.1.0
+flask-cors==3.0.10
 
 opentelemetry-api 
 opentelemetry-sdK
@@ -8,3 +10,7 @@ opentelemetry-instrumentation-flask
 opentelemetry-instrumentation-requests
 
 aws-xray-sdk
+
+watchtower
+
+Flask-AWSCognito
