--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       # OTEL_EXPORTER_OTLP_HEADER: "x-honeycomb-team=${HONEYCOMB_API_KEY}"
       AWS_XRAY_URL: "*4567-${GITPOD_WORKSPACE_ID}.${GITPOD_WORKSPACE_CLUSTER_HOST}*"
       AWS_XRAY_DAEMON_ADDRESS: "xray-daemon:2000"
+      AWS_COGNITO_USER_POOL_ID: "us-east-1_YrEKM9NtU"
+      AWS_COGNITO_USER_POOL_CLIENT_ID: "17iek3fi7cio7heqks411ti4ji"
     build: ./backend-flask
     ports:
       - "4567:4567"
@@ -27,7 +29,6 @@ services:
       REACT_APP_AWS_COGNITO_REGION: "${AWS_DEFAULT_REGION}"
       REACT_APP_AWS_USER_POOLS_ID: "us-east-1_YrEKM9NtU"
       REACT_APP_CLIENT_ID: "17iek3fi7cio7heqks411ti4ji"
-
     build: ./frontend-react-js
     ports:
       - "3000:3000"
